<resources>
    <string name="app_name">EcoCycle</string>
    <string name="txt_login">Login</string>
    <string name="txt_signup">Signup</string>
    <string name="quote">Less Waste, More Future</string>
    <string name="email">Email</string>
    <string name="no_hp">Nomor Telepon</string>
    <string name="nama">Nama</string>
    <string name="password">Password</string>
    <string name="password2">Konfirmasi Password</string>
    <string name="deskripsi">Belum punya akun?</string>
    <string name="deskripsi_limbah">Deskripsi</string>
    <string name="daftar">Daftar</string>
    <string name="home">Home</string>
    <string name="kamera">Kamera</string>
    <string name="pesan">Pesan</string>
    <string name="setting">Setting</string>
    <string name="info_lokasi">Lokasi TPS</string>
    <string name="chat">Chat Pemilik Limbah</string>
    <string name="data_pemilik">Data Pemilik Limbah</string>
    <string name="data_limbah">Data Limbah</string>

    <string name="company1_desc">BUMN</string>
    <string name="company1_title">PT Amartha Solution</string>
    <string name="company1_second">Bandung, Indonesia</string>
    <string name="company1_support">Bergerak di jasa perbesian , Kami sudah menghasilkan limbah sebanyak</string>

    <string name="upload_content">Gambar Perusahaan</string>
    <string name="upload_profil">Foto Profil</string>
    <string name="upload_gambar">Pilih Gambar</string>
    <string name="upload_judul">Nama Limbah</string>
    <string name="upload_alamat">Alamat</string>
    <string name="upload_button">Upload</string>
    <string name="upload_deskripsi">Deskripsi Limbah</string>
    <string name="btn_prediksi">Prediksi Limbah</string>
    <string name="btn_kamera">Kamera</string>
    <string name="btn_galeri">Pilih Gambar</string>
    <string name="txt_prediksi">Hasil Prediksi : </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_lokasi">Lokasi Tempat Sampah</string>

    <string name="info_sampah_organic"><![CDATA[Pengelolaan sampah organic: <b>[Informasi Pengelolaan]</b>]]></string>
    <string name="info_sampah_plastic"><![CDATA[Pengelolaan sampah plastic: <i>[Informasi Pengelolaan]</i>]]></string>
    <string name="info_sampah_kayu"><![CDATA[Pengelolaan sampah kayu: <b><i>[Informasi Pengelolaan]</i></b>]]></string>
    <string name="info_sampah_besi"><![CDATA[Pengelolaan sampah besi: <u>[Informasi Pengelolaan]</u>]]></string>
    <string name="info_non_recycle"><![CDATA[Pengelolaan non recycle: <font color="#FF0000">[Informasi Pengelolaan]</font>]]></string>

</resources>