<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/dataPenjual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/manrope_extrabold"
            android:text="@string/data_pemilik"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="160dp"
            android:contentDescription="@string/upload_profil"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pemilik"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataPenjual" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="24dp"
            android:background="#787878"
            app:layout_constraintTop_toBottomOf="@+id/ivProfil" />

        <TextView
            android:id="@+id/dataLimbah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/manrope_extrabold"
            android:text="@string/data_limbah"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <ImageView
            android:id="@+id/ivLimbah"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/upload_content"
            android:scaleType="centerCrop"
            android:src="@drawable/gambar_limbah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataLimbah" />

        <Button
            android:id="@+id/btnGambar"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginVertical="15dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/upload_gambar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLimbah" />

        <EditText
            android:id="@+id/edpemilik"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/nama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProfil"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edno"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/no_hp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.321"
            app:layout_constraintStart_toEndOf="@+id/ivProfil"
            app:layout_constraintTop_toBottomOf="@+id/edpemilik" />

        <EditText
            android:id="@+id/edJudul"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:hint="@string/upload_judul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGambar" />

        <EditText
            android:id="@+id/edAlamat"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="15dp"
            android:layout_marginTop="16dp"
            android:hint="@string/upload_alamat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edJudul" />

        <EditText
            android:id="@+id/edDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="textMultiLine"
            android:lines="6"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:gravity="top|start"
            android:background="@drawable/edittext_border"
            android:hint="@string/upload_deskripsi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edAlamat" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/upload_button"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edDeskripsi" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>